# jira-time-tracker

./: .gitignore  Cargo.toml  README.md
src/: app.rs  error.rs  events.rs  events_example.rs  main.rs  storage.rs
src/api/: config.rs  dto.rs  jira_client.rs  mod.rs  models.rs
src/events/: app_event.rs  dispatcher.rs  effect.rs  mod.rs  terminal_input_reader.rs
src/jira/: models.rs
src/storage/: storage.rs  ticket_keys_storage.json
src/ui/: matrix_rain.rs  mod.rs  theme.rs
src/ui/components/: button.rs  component.rs  confirmation_popup.rs  footer.rs  header.rs  input.rs  mod.rs  popup.rs  ticket_info.rs  ticket_input_popup.rs  ticket_list.rs  time_input_dialog.rs  time_input_popup.rs  user_info.rs
src/ui/notifications/: mod.rs  toast.rs  toast_manager.rs
src/ui/pages/: home.rs
